--- a/front/CV.css
+++ b/front/CV.css
@@ -3,7 +3,7 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
+            background-color: #ffffff;
         }
 
        
@@ -13,6 +13,7 @@
             margin: 0 auto;
             background-color: white;
             min-height: 100vh;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
         }
 
 
